Tue Aug 21 21:07:24 UTC 2007  Steve Huston  <shuston@riverace.com>

        * netsvcs/lib/Client_Logging_Handler.cpp (ACE_Client_Logging_Acceptor):
          Added an optional argument to the client logging daemon setup:
          -llocal-ip[:local-port]  - this allows one to specify the local
          address and port number for the connection to the server logging
          daemon. If the port number is not specified, it defaults to 0 (select
          an unused port) and if -l is not specified, the host's defaults
          are applied (as in all previous versions).

        * NEWS: Describe the above addition.

Tue Aug 21 15:34:00 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.cpp:
          Service_Config::parse_args_i was improperly splitting arguments
          that may contain spaces, such as explicit service directives.
          This patch addresses that explicitly quoting unknown arguments
          being passed on to the Service_Gestalt::parse_args_i. I removed
          unparsed args from the gestalt's list of known args, and cleaned
          up a bad error message.

Tue Aug 21 15:24:47 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/ace_guidelines.vsmacros:
          Whitespaces in .mk and .mpd files are not modified.

Tue Aug 21 07:07:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_irix6.x_common.GNU:
        * include/makeinclude/platform_irix6.x_g++.GNU:
        * include/makeinclude/platform_irix6.x_sgic++.GNU:
          Moved some parts to the common file

        * include/makeinclude/platform_mvs.GNU:
          Use ?=

        * include/makeinclude/platform_sco-nothread.GNU:
        * include/makeinclude/platform_sco5.0.0-CC-fsu-pthread.GNU:
        * include/makeinclude/platform_sco5.0.0-fsu-pthread.GNU:
        * include/makeinclude/platform_sco5.0.0-mit-pthread.GNU: